Dark mode fix 2

--- a/styles/poormoi.css
+++ b/styles/poormoi.css
@@ -7,9 +7,9 @@ html {
     width: 100%;
   }
 }
-@media(prefers-color-scheme:dark){div.nav{background-color:#000;}body{background-color:#000;color:#fff;}a{color:#fff;}div.blogpost{border-color:#fff}}
-@media(prefers-color-scheme:light){div.nav{background-color:#fff;}body{background-color:#fff;color:#000;}a{color:#000;}div.blogpost{border-color:#000}}
-@media(prefers-color-scheme:no-preference){div.nav{background-color:#fff;}body{background-color:#fff;color:#000;}a{color:#000;}div.blogpost{border-color:#000}}
+@media(prefers-color-scheme:dark){div.nav{background-color:#000;}main{background-color:#000;color:#fff;}a{color:#fff;}div.blogpost{border-color:#fff}}
+@media(prefers-color-scheme:light){div.nav{background-color:#fff;}main{background-color:#fff;color:#000;}a{color:#000;}div.blogpost{border-color:#000}}
+@media(prefers-color-scheme:no-preference){div.nav{background-color:#fff;}main{background-color:#fff;color:#000;}a{color:#000;}div.blogpost{border-color:#000}}
 body {
   font-family: Garamond;
   font-size: 12pt;
